# Projeto_02

./: README.md  main.py  posicao.py  pyproject.toml
