[project]
name = "projeto-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Sandro Roldan",email = "roldan.eng.software@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_02", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
